discussion/kv_engine/153272/153272_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time (ep-engine)

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7 in ep-engine.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

Note that this now requires that the EP_LOG_<LEVEL> macros always take
a valid fmtlib format string as the first argument, a raw string
literal is no longer supported - the following will no longer compile:

    EP_LOG_DEBUG("Something happened"); // compile-time error.

Instead, the _RAW macros added in the previous patch should be used:

    EP_LOG_DEBUG_RAW("Something else happened"); OK

Note: The issue here is that to perform compile-time format string
      checking, the format string must be wrapped in FMT_STRING() -
      before the format string is evaluated / passed into the actual
      logging functions / methods. However, one cannot pass a
      non-string literatl to FMT_STRING - essentially by design it
      fails at compile-time if it doesn't have {} placeholders.

      To address this (and still allow both styles of parameters) we
      _could_ in theory do some complex preprocessor logic - count the
      number of variadic arguments at compile-time and only apply
      FMT_STRING() macro to first if there is 2 or more arguments in
      total. I got something working for GCC and clang and which did
      this, but it didn't work for MSVC and the GCC one triggered a
      load of warnings, hence just making original macros always
      fmt-style, and adding _RAW for plan unformatted values.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-28 16:35:38.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-28 16:51:09.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9285/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9285/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36203/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\access_scanner.cc(58): error C2327: "ItemAccessVisitor::next": is not a type name, static, or enumerator ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18822/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0015/0096]: test dcp replica stream one collection with mutations just from disk...Uncaught std::exception. what():ThrowExceptionUnderflowPolicy current:497 arg:521
[2021-05-28T16:43:50.098Z] (20226 ms) DIED
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18822/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18822/ )

AddressSanitizer issue: 672 byte(s) leaked in 2 allocation(s). ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18822/ )

Test exceeded the timeout:
[2021-05-28T16:43:50.099Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18822/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30919/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7867/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9908/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10984/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10838/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
